@@ -80,9 +80,9 @@ $GPZDG,GPSTIME,DD,MM,YYYY,AA.BB,V*CS&lt;cr&gt;&lt;lf&gt;
 		<h4>Fudge Factors</h4>
 		<dl>
 			<dt><tt>time1 <i>time</i></tt>
-			<dd>Specifies the time offset calibration factor, in seconds and fraction, with default 0.0.
+			<dd>Specifies the PPS time offset calibration factor, in seconds and fraction, with default 0.0.
 			<dt><tt>time2 <i>time</i></tt>
-			<dd>Not used by this driver.
+			<dd>Specifies the serial end of line time offset calibration factor, in seconds and fraction, with default 0.0.
 			<dt><tt>stratum <i>number</i></tt>
 			<dd>Specifies the driver stratum, in decimal from 0 to 15, with default 0.
 			<dt><tt>refid <i>string</i></tt>
