@@ -1,10 +1,14 @@
+* [Bug 1237] Windows serial code treat CR and LF both as line
+  terminators.
+* [Bug 1238] use fudge time2 for serial timecode offset in NMEA driver.
 (4.2.5p185) 2009/07/01 Released by Harlan Stenn <stenn@ntp.org>
 * Documentation updates from Dave Mills.
 * [Bug 1234] convert NMEA driver to use common PPSAPI code.
 * timepps-Solaris.h pps_handle_t changed from pointer to scalar
 * Spectracom refclock added to Windows port of ntpd
 * [Bug 1236] Declaration order fixed.
-* Bracket private ONCORE debug statements with #if 0 rather than #ifdef DEBUG
+* Bracket private ONCORE debug statements with #if 0 rather than #ifdef
+  DEBUG
 * Delete ONCORE debug statement that is now handled elsewhere.
 (4.2.5p184) 2009/06/24 Released by Harlan Stenn <stenn@ntp.org>
 * [Bug 1233] atom refclock fudge time1 sign flipped in 4.2.5p164.
